fix: mobile login/register — CORS, API URL fallback, and auth errors
Allow Vercel origins via CORS patterns, use production API when VITE_API_URL is missing, normalize mobile form input, and return clear auth/validation errors instead of generic 500s.

Co-authored-by: Cursor <cursoragent@cursor.com>